nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
#        securityContext:                    #nfs 사용할때 넣기
#          runAsUser: 0                   #nfs 사용할때 넣기
#          allowPrivilegeEscalation: false   #nfs 사용할때 넣기        
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/
          name: nginx-conf
          readOnly: true
        - mountPath: /var/log/nginx
          name: nginx-logs
#          readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
              name: nginx-conf  
        - name: nginx-logs
          persistentVolumeClaim:
            claimName: nginx-logs-pvc
