tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: blueassemble/0830:tomcat-ver7
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps/ROOT/index.jsp
          name: tomcat-conf
          subPath: index.jsp             
      volumes:
        - name: tomcat-conf
          configMap:
              name: tomcat-conf
