tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: tomcat
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat
status:
  loadBalancer: {}
