ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:

    # kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "public-ip"
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"
    networking.gke.io/managed-certificates: "ingress-tls"
spec:
  rules:
  - host: www.blueassemble.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx
          servicePort: 80
